Доработка дружбы пользователей и лайков фильмов, фиксы валидации и кодов ошибок